--- a/src/index.html
+++ b/src/index.html
@@ -94,6 +94,8 @@
             value="Y"
           >
             Yes
+        </label>
+        <label class="label">
           <input
               type="radio"
               name="love-to-cats"
