--- a/src/index.html
+++ b/src/index.html
@@ -86,23 +86,25 @@
 
       <fieldset class="fieldset" name="about you">
         <legend>An interesting fact about you!</legend>
-        <label class="label">
-          Do you love cats?
-          <input
-            type="radio"
-            name="love-to-cats"
-            value="Y"
-          >
-            Yes
-        </label>
-        <label class="label">
-          <input
+        <div class="label">
+          <label>
+            Do you love cats?
+            <input
               type="radio"
               name="love-to-cats"
-              value="N"
-          >
+              value="Y"
+            >
+            Yes
+          </label>
+          <label>
+            <input
+                type="radio"
+                name="love-to-cats"
+                value="N"
+            >
             No
-        </label>
+          </label>
+        </div>
         <label class="label">
           What is your favorite color?
           <input
